fixes jumping scroll bar issue

--- a/app.css
+++ b/app.css
@@ -24,6 +24,8 @@
     font-weight: normal;
     font-style: italic;
 }
+// https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/
+html { overflow-y: scroll; }
 
 ::-moz-selection {
     background: #B39DDB;
